# LinJ

./: .gitignore  AGENTS.md  debug_consistency.py  pyproject.toml  test_path_resolver.py
.github/: .gitkeep
autogen/: AGENTS.md  main.py  pyproject.toml  test_evaluator.py  test_pydantic.py  verify_path.py
autogen/src/linj_autogen/: __init__.py  cli.py
autogen/src/linj_autogen/autogen/: MIGRATION.md  REFACTORING_SUMMARY.md  __init__.py  agent.py  backend.py  bridge.py  compatibility.py
autogen/src/linj_autogen/contitext/: __init__.py  commit_manager.py  compat.py  continuation.py  engine.py  mapper.py  signal.py
autogen/src/linj_autogen/core/: __init__.py  changeset.py  compat.py  contract_validator.py  document.py  edges.py  errors.py  nodes.py  path.py  state.py  tracing.py
autogen/src/linj_autogen/executor/: evaluator.py  runner.py  scheduler.py
autogen/tests/integration/: test_consistency.py  test_contitext.py  test_mapper_consistency.py  test_workflow.py
autogen/tests/unit/: test_changeset.py  test_commit_manager.py  test_condition.py  test_contract_validator.py  test_document.py  test_edges.py  test_path.py  test_scheduler.py
config/: .gitkeep
examples/: README.md  langgraph_backend.py
examples/product_name_generator/: main.py  workflow.yaml
examples/research_and_write/: main.py  tools.py  workflow.yaml
langgraph/: AGENTS.md  __init__.py  config.py  executor_adapter.py  scheduler.py  state.py  types.py
langgraph/adapters/: __init__.py  base.py  contitext_adapter.py  executor_adapter.py
langgraph/agents/: __init__.py
langgraph/nodes/: __init__.py  base.py
langgraph/tools/: __init__.py
langgraph/utils/: __init__.py  logging.py  state_helpers.py  validation.py
langgraph/workflows/: __init__.py
linj/: __init__.py  backends.py
linj/plugins/: __init__.py  autogen.py  base.py  langgraph.py
scripts/: .gitkeep
shared/: AGENTS.md  __init__.py
shared/contitext/: README.md  __init__.py  commit_manager.py  continuation.py  engine.py  mapper.py  signal.py
shared/core/: AGENTS.md  __init__.py  changeset.py  condition.py  contract_validator.py  document.py  edges.py  nodes.py  path.py  state.py  tracing.py
tests/: __init__.py
theory/: LinJ.md
(+24 files in other folders)
