[project]
name = "linj"
version = "0.1.0"
description = "LinJ Project - Refactored Architecture with Shared Components and LangGraph Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "typing-extensions>=4.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# AutoGen backend
autogen = [
    "linj-autogen",
]

# LangGraph backend
langgraph = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
]

# Install all backends
all = [
    "linj[autogen]",
    "linj[langgraph]",
]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[project.scripts]
# Example entry points
run-example = "examples.langgraph_backend:run_workflow"